# wheel

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: whl.hpp
include/whl/: collection.hpp  common.hpp  cons.hpp  container.hpp  format.hpp  function.hpp  list.hpp  literals.hpp  meta.hpp  operation.hpp  option.hpp  pointer.hpp  print.hpp  sequence.hpp  string.hpp  type.hpp
test/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt  test.cpp
